--- a/assets/templates/destop_template_style.css
+++ b/assets/templates/destop_template_style.css
@@ -72,7 +72,7 @@
         padding-left: 8%;
         padding-right: 33px;
         box-sizing: border-box;
-        box-shadow: 0px 4px 2px -2px rgb(195, 195, 195);
+        box-shadow: 0px 3px 2px -2px rgb(195, 195, 195);
     }
     
     .img-topper{
