--- a/assets/templates/mobile_template_style.css
+++ b/assets/templates/mobile_template_style.css
@@ -24,7 +24,7 @@
         justify-content: space-between;
         padding: 20px 24px;
         box-sizing: border-box;
-        box-shadow: 0px 4px 2px -2px rgb(195, 195, 195);
+        box-shadow: 0px 3px 2px -2px rgb(195, 195, 195);
     }
 
     .topper-mobile img{
